fix(_intro): fix background on iOS devices
- Set background-attachment to scroll

--- a/src/scss/sections/_intro.scss
+++ b/src/scss/sections/_intro.scss
@@ -19,6 +19,11 @@
     background-position: 25% 50%;
   }
 
+  /* iOS fix */
+  @supports (-webkit-touch-callout: none) {
+    background-attachment: scroll;
+  }
+
   .title {
     @include custom-text($font-title, 700, 5rem, $text-light);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
